--- a/client/package.json
+++ b/client/package.json
@@ -18,6 +18,8 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-file-base64": "^1.0.3",
+    "react-notifications": "^1.7.2",
+    "react-notify-toast": "^0.5.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
     "redux": "^4.1.0",
