--- a/client/package.json
+++ b/client/package.json
@@ -12,7 +12,9 @@
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
+    "ansi-regex": "^6.0.1",
     "axios": "^0.21.4",
+    "immer": "^9.0.6",
     "jwt-decode": "^3.1.2",
     "moment": "^2.29.1",
     "react": "^17.0.2",
